--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parse": "^0.1.0",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
+    "mongoose": "^5.6.13",
+    "mongoose-paginate": "^5.0.3",
     "path": "^0.12.7",
+    "puppeteer": "^1.19.0",
+    "request": "^2.88.0",
     "unirest": "^0.6.0"
   }
 }
