--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.13",
     "mongoose-paginate": "^5.0.3",
+    "mysql": "^2.17.1",
     "path": "^0.12.7",
     "puppeteer": "^1.19.0",
     "request": "^2.88.0",
