--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^3.0.6",
     "body-parse": "^0.1.0",
     "cheerio": "^1.0.0-rc.3",
+    "content-based-recommender": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
