--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "mongoose-paginate": "^5.0.3",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "path": "^0.12.7",
     "puppeteer": "^1.19.0",
