--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.4.8",
     "path": "^0.12.7",
     "puppeteer": "^1.19.0",
     "request": "^2.88.0",
